[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.31"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
requests = "^2.32.3"
openai = "^1.35.8"
line-bot-sdk = "^3.11.0"
beautifulsoup4 = "^4.12.3"
cloudinary = "^1.40.0"
fastapi-mail = "^1.4.1"
apscheduler = "^3.10.4"
loguru = "^0.7.2"
celery = "^5.4.0"
redis = "^5.0.6"
flower = "^2.0.1"
pymysql = "^1.1.1"
cryptography = "^42.0.8"
email-validator = "^2.2.0"
stripe = "^10.0.0"
numpy = "^1.26.4"
pyproj = "^3.6.0"
aiohttp = "^3.8.4"
pytz = "^2024.1"
boto3 = "^1.35.0"
gunicorn = "^22.0.0"
mangum = "^0.17.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.0.0"
isort = "^5.12.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
